--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                     </li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a href="termsofservices.html#content4-1g" class="text-primary" target="_blank"></a><a href="termsofservices.html#content4-1g" class="text-primary">Terms Of&nbsp;Services</a>
                     </li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-primary" href="index.html#contacts1-1p">Contact Us</a>
+                        <a class="text-primary" href="index.html#contacts1-l">Contact Us</a>
                     </li></ul>
             </div>
             <div class="row social-row">
