--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="Aboutus.html#header13-y">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="Aboutus.html">
                             About us</a></li>
                     
                     <li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="index.html#image1-r">Contacts</a>
@@ -340,7 +340,7 @@
                 <p class="mbr-text mbr-fonts-style mb-4 display-4">Phone<br><a href="tel:+64277484933" class="text-primary">+(64) 277484933</a><br><br>Email<br><a href="mailto:j.adams@jazzitupbeautynz.com" class="text-primary">j.adams@jazzitupbeautynz.com</a></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-4">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong><a href="AboutUs.html#header13-y" class="text-primary">About Us</a></strong></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong><a href="AboutUs.html" class="text-primary">About Us</a></strong></h5>
                 <ul class="list mbr-fonts-style mb-4 display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
