--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="Aboutus.html">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="AboutUs.html">
                             About us</a></li>
                     
                     <li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="index.html#image1-r">Contacts</a>
