--- a/AboutUs.html
+++ b/AboutUs.html
@@ -54,7 +54,7 @@
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="Aboutus.html#header13-y">
                             About us</a></li>
                     
-                    <li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="index.html#image1-r">Contacts</a>
+                    <li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="index.html#Contacts 1-l">Contacts</a>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.facebook.com/jazzitupbeautynz" target="_blank">
