--- a/AboutUs.html
+++ b/AboutUs.html
@@ -51,7 +51,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="Aboutus.html#header13-y">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="AboutUs.html#header13-y">
                             About us</a></li>
                     
                     <li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="index.html#contacts1-l">Contacts</a>
