--- a/AboutUs.html
+++ b/AboutUs.html
@@ -120,8 +120,7 @@
                     <strong>Feedback</strong>
                 </h5>
                 <p class="mbr-text mbr-fonts-style mb-4 display-4">
-                    Please send us your ideas, reports, suggestions! Any feedback would be appreciated.
-                </p>
+                    Please send us your ideas, reports, suggestions! Any feedback would be appreciated.<br></p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=33 Kahuparere Crescent, Pyes Pa, Tauriko, Tauranga 3112" allowfullscreen=""></iframe></div>
@@ -158,6 +157,6 @@
     
   
 
-<input name="animation" type="hidden">
+    <input name="animation" type="hidden">
   </body>
 </html>
