--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="card-box align-center">
                         <h1 class="card-title mbr-fonts-style mb-3 display-7">
                             <strong>Warning</strong><br><br></h1>
-                        <p class="mbr-text mbr-fonts-style display-7">We are currently closed due to technical problems<br>As we undergo new changes we are unable to receive emails or phone calls<br><br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">We are currently closed as we are on a family vacation<br><br></p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-secondary-outline display-4" href="https://jazzitupbeautynz.com/"></a></div>
                     </div>
                 </div>
