--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-12">
                     <h3 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>OPENING HOURS</strong><strong><br></strong></h3>
-                <ul class="list mbr-fonts-style display-7"><p>UNFORTANATLY WE ARE CLOSED UNTIL FURTHER NOTICE</p><p>HOWEVER IF YOU BOOK FOR SUMMER TIME WE WILL CONTACT YOU&nbsp;</p><p>REGARDING YOUR BOOKING TIME</p></ul>
+                <ul class="list mbr-fonts-style display-7"><p>UNFORTUNATELY WE ARE CLOSED UNTIL FURTHER NOTICE</p><p>HOWEVER IF YOU BOOK FOR SUMMER TIME WE WILL CONTACT YOU&nbsp;</p><p>REGARDING YOUR BOOKING TIME</p></ul>
             </div>
         </div>
     </div>
