--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/2nd-jazz-it-up-1024x768.png" type="image/x-icon">
   <meta name="description" content="where all the magic happens where I bring the beauty out from your eyes">
-  <meta name="keywords" content="eyelashes, beauty, Newzealand Beauty, Tauranga Eyelashes">
+  <meta name="keywords" content="eyelashes, beauty, Newzealand Beauty, Tauranga Eyelashes, Beauty Salons">
   
   
   <title>JazzItUpBeautyNz</title>
